--- a/scss/partials/_locations.scss
+++ b/scss/partials/_locations.scss
@@ -39,9 +39,9 @@
 
     @at-root{
       @keyframes level-sprite {
-        0% { left: 0;}
-        50% { left: -100%;}
-        100% { left: 0%;}
+        0% { transform: translate-x(0);}
+        50% { transform: translate-x(-100%);}
+        100% { transform: translate-x(0%);}
       }
     }
   }
